--- a/CraftopiaSavefileEditor/CraftopiaSavefileEditor.csproj
+++ b/CraftopiaSavefileEditor/CraftopiaSavefileEditor.csproj
@@ -61,11 +61,20 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="OcsJsonConvertRsultForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OcsJsonConvertRsultForm.Designer.cs">
+      <DependentUpon>OcsJsonConvertRsultForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScintillaNetUtility\HotKeyManager.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OcsJsonConvertRsultForm.resx">
+      <DependentUpon>OcsJsonConvertRsultForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
