--- a/CraftopiaSavefileEditor/CraftopiaSavefileEditor.csproj
+++ b/CraftopiaSavefileEditor/CraftopiaSavefileEditor.csproj
@@ -55,11 +55,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\OcsController.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="OcsJsonConvertRsultForm.cs">
       <SubType>Form</SubType>
@@ -70,8 +70,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScintillaNetUtility\HotKeyManager.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OcsJsonConvertRsultForm.resx">
       <DependentUpon>OcsJsonConvertRsultForm.cs</DependentUpon>
