--- a/CraftopiaSavefileEditor/CraftopiaSavefileEditor.csproj
+++ b/CraftopiaSavefileEditor/CraftopiaSavefileEditor.csproj
@@ -55,25 +55,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\OcsController.cs" />
-    <Compile Include="MainForm.cs">
+    <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="View\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="OcsJsonConvertRsultForm.cs">
+    <Compile Include="View\OcsJsonConvertRsultForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="OcsJsonConvertRsultForm.Designer.cs">
+    <Compile Include="View\OcsJsonConvertRsultForm.Designer.cs">
       <DependentUpon>OcsJsonConvertRsultForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScintillaNetUtility\HotKeyManager.cs" />
-    <EmbeddedResource Include="MainForm.resx">
+    <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="OcsJsonConvertRsultForm.resx">
+    <EmbeddedResource Include="View\OcsJsonConvertRsultForm.resx">
       <DependentUpon>OcsJsonConvertRsultForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
