--- a/CraftopiaSavefileEditor/packages.config
+++ b/CraftopiaSavefileEditor/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Jil" version="2.17.0" targetFramework="net48" />
   <package id="ScintillaNET_FindReplaceDialog" version="1.5.0" targetFramework="net48" />
+  <package id="Sigil" version="4.7.0" targetFramework="net48" />
   <package id="unofficial.ScintillaNET" version="3.8.7" targetFramework="net48" />
 </packages>
