--- a/CraftopiaSavefileEditor/packages.config
+++ b/CraftopiaSavefileEditor/packages.config
@@ -4,4 +4,6 @@
   <package id="ScintillaNET_FindReplaceDialog" version="1.5.0" targetFramework="net48" />
   <package id="Sigil" version="4.7.0" targetFramework="net48" />
   <package id="unofficial.ScintillaNET" version="3.8.7" targetFramework="net48" />
+  <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net48" />
+  <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net48" />
 </packages>
